--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "react-scripts start --port 3000",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:imported":"node backend/seeder.js",
+    "data:destroy":"node backend/seeder.js -d"
   },
   "author": "Majid",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.1",
